picture and style

--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Hi! Thanks for reviewing my Quiz.  Please enjoy this painting of a cat painted by someone who has never seen a cat before.</h1>
+<body>
+	<h1>Hi! Thanks for reviewing my Quiz.  Please enjoy this painting of a cat painted by someone who has obviously never seen a cat before.</h1>
+	<%= image_tag ("cat.png") %>
+</body>
+
