--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,10 @@
 <body>
 	<h1>Hi! Thanks for reviewing my Quiz.  Please enjoy this painting of a cat painted by someone who has obviously never seen a cat before.</h1>
 	<%= image_tag ("cat.png") %>
+	<%= link_to 'Add a new cat pic', new_cat_path %>	
+	<% @cats.each do |cat| %>
+		<h2><%= cat.title %></h2>
+		<h3><%= cat.caption %></h3>
+	<% end %>
 </body>
 
